--- a/Save Me/app/src/main/res/layout/layout_content_nav.xml
+++ b/Save Me/app/src/main/res/layout/layout_content_nav.xml
@@ -32,15 +32,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
-    <LinearLayout
+    <GridView
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="This is my content area."/>
-    </LinearLayout>
+        android:gravity="center"
+        android:numColumns="auto_fit"
+        android:scrollbars="none"/>
 
 </LinearLayout>
