update floating menu

--- a/Save Me/app/src/main/res/layout/layout_content_nav.xml
+++ b/Save Me/app/src/main/res/layout/layout_content_nav.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -31,13 +32,8 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <GridView
-        android:id="@+id/gridview"
+    <include
+        layout="@layout/layout_floating_menu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:numColumns="auto_fit"
-        android:scrollbars="none"/>
-
+        android:layout_height="match_parent"/>
 </LinearLayout>
