--- a/Save Me/app/src/main/res/layout/layout_floating_menu.xml
+++ b/Save Me/app/src/main/res/layout/layout_floating_menu.xml
@@ -72,7 +72,7 @@
             app:fab_size="mini"
             app:fab_showAnimation="@anim/fab_scale_up"
             app:fab_hideAnimation="@anim/fab_scale_down"
-            app:fab_label="tuan"
+            app:fab_label="thêm chữ"
             app:fab_progress_color="#FF009688"
             app:fab_progress_backgroundColor="#4D000000"
             app:fab_progress_indeterminate="false"
@@ -95,7 +95,7 @@
             app:fab_size="mini"
             app:fab_showAnimation="@anim/fab_scale_up"
             app:fab_hideAnimation="@anim/fab_scale_down"
-            app:fab_label="123456"
+            app:fab_label="thêm ảnh"
             app:fab_progress_color="#FF009688"
             app:fab_progress_backgroundColor="#4D000000"
             app:fab_progress_indeterminate="false"
