--- a/Save Me/app/src/main/res/layout/adapter_note.xml
+++ b/Save Me/app/src/main/res/layout/adapter_note.xml
@@ -7,16 +7,28 @@
     android:orientation="vertical">
     <TextView
         android:id="@+id/textView"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textColor="@android:color/black"/>
+        android:text="TextView"
+        android:textColor="@android:color/black"
+        android:textSize="25sp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:gravity="start"/>
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textSize="0sp"
+        android:textColor="@android:color/black"
+        android:gravity="start"/>
 
 </LinearLayout>
