--- a/Save Me/app/src/main/res/layout/layout_floating_menu.xml
+++ b/Save Me/app/src/main/res/layout/layout_floating_menu.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:numColumns="auto_fit"
+        android:numColumns="2"
         android:scrollbars="none"/>
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/menu"
@@ -59,49 +59,88 @@
             android:id="@+id/item1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="bottom|right"
-            android:src="@drawable/ic_button"
-            app:fab_colorNormal="#DA4336"
-            app:fab_colorPressed="#E75043"
-            app:fab_colorRipple="#99FFFFFF"
-            app:fab_showShadow="true"
-            app:fab_shadowColor="#66000000"
-            app:fab_shadowRadius="4dp"
-            app:fab_shadowXOffset="1dp"
-            app:fab_shadowYOffset="3dp"
-            app:fab_size="mini"
-            app:fab_showAnimation="@anim/fab_scale_up"
-            app:fab_hideAnimation="@anim/fab_scale_down"
-            app:fab_label="thêm chữ"
-            app:fab_progress_color="#FF009688"
-            app:fab_progress_backgroundColor="#4D000000"
-            app:fab_progress_indeterminate="false"
-            app:fab_progress_max="100"
-            app:fab_progress="0"
-            app:fab_progress_showBackground="true"/>
+            fab:menu_fab_size="normal"
+            fab:menu_showShadow="true"
+            fab:menu_shadowColor="#66000000"
+            fab:menu_shadowRadius="4dp"
+            fab:menu_shadowXOffset="1dp"
+            fab:menu_shadowYOffset="3dp"
+            fab:menu_colorNormal="#DA4336"
+            fab:menu_colorPressed="#E75043"
+            fab:menu_colorRipple="#99FFFFFF"
+            fab:menu_animationDelayPerItem="50"
+            fab:menu_icon="@drawable/fab_add"
+            fab:menu_buttonSpacing="0dp"
+            fab:menu_labels_margin="0dp"
+            fab:menu_labels_paddingTop="4dp"
+            fab:menu_labels_paddingRight="8dp"
+            fab:menu_labels_paddingBottom="4dp"
+            fab:menu_labels_paddingLeft="8dp"
+            fab:menu_labels_padding="8dp"
+            fab:menu_labels_textColor="#FFFFFF"
+            fab:menu_labels_textSize="14sp"
+            fab:menu_labels_cornerRadius="3dp"
+            fab:menu_labels_colorNormal="#333333"
+            fab:menu_labels_colorPressed="#444444"
+            fab:menu_labels_colorRipple="#66FFFFFF"
+            fab:menu_labels_showShadow="true"
+            fab:menu_labels_singleLine="false"
+            fab:menu_labels_ellipsize="none"
+            fab:menu_labels_maxLines="-1"
+            fab:menu_labels_style="@style/YourCustomLabelsStyle"
+            fab:menu_labels_position="bottom"
+            fab:menu_openDirection="up"
+            fab:menu_backgroundColor="@android:color/transparent"
+            fab:menu_fab_label="your_label_here"
+            fab:menu_fab_show_animation="@anim/my_show_animation"
+            fab:menu_fab_hide_animation="@anim/my_hide_animation"/>
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/item2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_button"
-            app:fab_colorNormal="#DA4336"
-            app:fab_colorPressed="#E75043"
-            app:fab_colorRipple="#99FFFFFF"
-            app:fab_showShadow="true"
-            app:fab_shadowColor="#66000000"
-            app:fab_shadowRadius="4dp"
-            app:fab_shadowXOffset="1dp"
-            app:fab_shadowYOffset="3dp"
-            app:fab_size="mini"
-            app:fab_showAnimation="@anim/fab_scale_up"
-            app:fab_hideAnimation="@anim/fab_scale_down"
-            app:fab_label="thêm ảnh"
-            app:fab_progress_color="#FF009688"
-            app:fab_progress_backgroundColor="#4D000000"
-            app:fab_progress_indeterminate="false"
-            app:fab_progress_max="100"
-            app:fab_progress="0"
-            app:fab_progress_showBackground="true"/>
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="bottom|right"
+            fab:menu_fab_size="normal"
+            fab:menu_showShadow="true"
+            fab:menu_shadowColor="#66000000"
+            fab:menu_shadowRadius="4dp"
+            fab:menu_shadowXOffset="1dp"
+            fab:menu_shadowYOffset="3dp"
+            fab:menu_colorNormal="#DA4336"
+            fab:menu_colorPressed="#E75043"
+            fab:menu_colorRipple="#99FFFFFF"
+            fab:menu_animationDelayPerItem="50"
+            fab:menu_icon="@drawable/fab_add"
+            fab:menu_buttonSpacing="0dp"
+            fab:menu_labels_margin="0dp"
+            fab:menu_labels_paddingTop="4dp"
+            fab:menu_labels_paddingRight="8dp"
+            fab:menu_labels_paddingBottom="4dp"
+            fab:menu_labels_paddingLeft="8dp"
+            fab:menu_labels_padding="8dp"
+            fab:menu_labels_textColor="#FFFFFF"
+            fab:menu_labels_textSize="14sp"
+            fab:menu_labels_cornerRadius="3dp"
+            fab:menu_labels_colorNormal="#333333"
+            fab:menu_labels_colorPressed="#444444"
+            fab:menu_labels_colorRipple="#66FFFFFF"
+            fab:menu_labels_showShadow="true"
+            fab:menu_labels_singleLine="false"
+            fab:menu_labels_ellipsize="none"
+            fab:menu_labels_maxLines="-1"
+            fab:menu_labels_style="@style/YourCustomLabelsStyle"
+            fab:menu_labels_position="bottom"
+            fab:menu_openDirection="up"
+            fab:menu_backgroundColor="@android:color/transparent"
+            fab:menu_fab_label="your_label_here"
+            fab:menu_fab_show_animation="@anim/my_show_animation"
+            fab:menu_fab_hide_animation="@anim/my_hide_animation"/>
     </com.github.clans.fab.FloatingActionMenu>
 
 </FrameLayout>
