--- a/Save Me/app/src/main/res/layout/layout_content_nav.xml
+++ b/Save Me/app/src/main/res/layout/layout_content_nav.xml
@@ -32,8 +32,13 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
-    <include
-        layout="@layout/layout_floating_menu"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:id="@+id/main_frame">
+    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--    <include-->
+<!--        layout="@layout/layout_floating_menu"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
 </LinearLayout>
