--- a/Save Me/app/src/main/res/layout/adapter_note.xml
+++ b/Save Me/app/src/main/res/layout/adapter_note.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -23,6 +28,7 @@
         android:textSize="20sp"
         android:textColor="@android:color/black"
         android:gravity="start"/>
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
@@ -32,3 +38,4 @@
         android:gravity="start"/>
 
 </LinearLayout>
+
