--- a/Save Me/app/src/main/res/layout/adapter_note.xml
+++ b/Save Me/app/src/main/res/layout/adapter_note.xml
@@ -8,22 +8,24 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_gravity="center"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="25sp"
-        android:gravity="center"/>
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="TextView"
         android:textSize="20sp"
         android:textColor="@android:color/black"
