--- a/Save Me/app/src/main/res/layout/adapter_note_image.xml
+++ b/Save Me/app/src/main/res/layout/adapter_note_image.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageNote"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"/>
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title_image"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_gravity="center"
@@ -21,18 +21,8 @@
         android:textColor="@android:color/black"
         android:textSize="25sp"
         android:gravity="center" />
-
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="TextView"
-        android:textSize="20sp"
-        android:textColor="@android:color/black"
-        android:gravity="start"/>
-
-    <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/id"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="0sp"
