--- a/Save Me/app/src/main/res/layout/fragment_list_note.xml
+++ b/Save Me/app/src/main/res/layout/fragment_list_note.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:layout_height="match_parent">
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
@@ -55,6 +53,5 @@
             android:src="@drawable/ic"
             fab:fab_size="mini"
             fab:fab_label="Text" />
-
     </com.github.clans.fab.FloatingActionMenu>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
