--- a/Save Me/app/src/main/res/layout/adapter_note_sound.xml
+++ b/Save Me/app/src/main/res/layout/adapter_note_sound.xml
@@ -13,18 +13,19 @@
         />
     <TextView
         android:id="@+id/data_sound"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:text="tuadjjaksldjfa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
     <TextView
         android:id="@+id/title_sound"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="30dp"
         android:gravity="center"
         android:text="asdkfljasl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/data_sound"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
