--- a/Save Me 2/app/src/main/res/layout/fragment_text.xml
+++ b/Save Me 2/app/src/main/res/layout/fragment_text.xml
@@ -4,19 +4,116 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.fragment.TextFragment">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    tools:context=".view.fragment.TextFragment"
+    android:background="#009688">
+    <LinearLayout
+        android:id="@+id/layout_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="22dp"
         android:background="#00BCD4">
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/ic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="10dp"/>
+            <ImageButton
+                android:id="@+id/bt_text_save"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="10dp"/>
+            <ImageButton
+                android:id="@+id/bt_text_list"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic"
+                app:layout_constraintEnd_toStartOf="@id/bt_text_save"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="10dp"/>
+            <ImageButton
+                android:id="@+id/bt_text_tag"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic"
+                app:layout_constraintEnd_toStartOf="@id/bt_text_list"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="10dp"/>
+            <ImageButton
+                android:id="@+id/bt_text_theme"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic"
+                app:layout_constraintEnd_toStartOf="@id/bt_text_tag"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="10dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+            <EditText
+                android:id="@+id/et_text_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:hint="Tilte"
+                android:maxLines="1"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <EditText
+                android:id="@+id/et_text_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:hint="Content"
+                android:background="@android:color/transparent"
+                app:layout_constraintTop_toBottomOf="@id/et_text_title"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_text_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@id/et_text_content"/>
+            <TextView
+                android:id="@+id/tv_text_tag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/rv_text_list"/>
+            <RatingBar
+                android:id="@+id/text_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:rating="0"
+                android:numStars="5"
+                android:stepSize="1.0"
+                app:layout_constraintTop_toBottomOf="@id/tv_text_tag"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+            <ImageButton
+                android:id="@+id/ib_text_time"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/ic"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_rating" />
+            <TextView
+                android:id="@+id/tv_text_created"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ngày khởi tạo"
+                app:layout_constraintTop_toBottomOf="@id/ib_text_time"/>
+            <TextView
+                android:id="@+id/tv_text_updated"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ngày cập nhật"
+                app:layout_constraintTop_toBottomOf="@id/tv_text_created"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </FrameLayout>
