--- a/Save Me 2/app/src/main/res/values/colors.xml
+++ b/Save Me 2/app/src/main/res/values/colors.xml
@@ -3,4 +3,25 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <array name="themeColors">
+        <item>@color/green_500</item>
+        <item>@color/blue_500</item>
+        <item>@color/red_500</item>
+        <item>@color/grey_500</item>
+        <item>@color/orange_500</item>
+    </array>
+
+    <string-array name="themeColorHex">
+        <item>#f6e58d</item>
+        <item>#ffbe76</item>
+        <item>#ff7979</item>
+        <item>#badc58</item>
+        <item>#dff9fb</item>
+        <item>#7ed6df</item>
+        <item>#e056fd</item>
+        <item>#686de0</item>
+        <item>#30336b</item>
+        <item>#95afc0</item>
+    </string-array>
 </resources>
